sg_consul/main.tf
//
// Module: tf_aws_sg/sg_consul
//
// - Ports for Consul take from https://www.consul.io/docs/agent/options.html - Ports Used
//

// Security Group Resource for Module
resource "aws_security_group" "main_security_group" {
  name        = "${var.security_group_name}"
  description = "Security Group ${var.security_group_name}"
  vpc_id      = "${var.vpc_id}"
}

// Allow any internal network flow.
resource "aws_security_group_rule" "ingress_any_any_self" {
  security_group_id = "${aws_security_group.main_security_group.id}"
  from_port         = 0
  to_port           = 65535
  protocol          = "-1"
  self              = true
  type              = "ingress"
}

// Allow TCP:8300 (Server RPC).
resource "aws_security_group_rule" "ingress_tcp_8300_self" {
  security_group_id = "${aws_security_group.main_security_group.id}"
  from_port         = 8300
  to_port           = 8300
  protocol          = "tcp"
  cidr_blocks       = ["${var.source_cidr_block}"]
  type              = "ingress"
}

// Allow TCP:8500 (Consul Web UI).
resource "aws_security_group_rule" "ingress_tcp_8500_self" {
  security_group_id = "${aws_security_group.main_security_group.id}"
  from_port         = 8500
  to_port           = 8500
  protocol          = "tcp"
  cidr_blocks       = ["${var.source_cidr_block}"]
  type              = "ingress"
}

// Allow TCP:8301 (Serf LAN).
resource "aws_security_group_rule" "ingress_tcp_8301_self" {
  security_group_id = "${aws_security_group.main_security_group.id}"
  from_port         = 8301
  to_port           = 8301
  protocol          = "tcp"
  cidr_blocks       = ["${var.source_cidr_block}"]
  type              = "ingress"
}

// Allow UDP:8301 (Serf LAN).
resource "aws_security_group_rule" "ingress_udp_8301_self" {
  security_group_id = "${aws_security_group.main_security_group.id}"
  from_port         = 8301
  to_port           = 8301
  protocol          = "udp"
  cidr_blocks       = ["${var.source_cidr_block}"]
  type              = "ingress"
}

// Allow TCP:8600 (Consul DNS).
resource "aws_security_group_rule" "ingress_tcp_8600_self" {
  security_group_id = "${aws_security_group.main_security_group.id}"
  from_port         = 8600
  to_port           = 8600
  protocol          = "tcp"
  cidr_blocks       = ["${var.source_cidr_block}"]
  type              = "ingress"
}

// Allow UDP:8600 (Consul DNS).
resource "aws_security_group_rule" "ingress_udp_8600_self" {
  security_group_id = "${aws_security_group.main_security_group.id}"
  from_port         = 8600
  to_port           = 8600
  protocol          = "udp"
  cidr_blocks       = ["${var.source_cidr_block}"]
  type              = "ingress"
}
